# exercism_tui

./: Cargo.toml  README.md
src/: api.rs  async_tasks.rs  fsm.rs  main.rs
src/api/: description.rs  exercises.rs  mod.rs  models.rs  tests.rs  tracks.rs
src/api/description/: get_description.rs  tests.rs
src/api/exercises/: get_exercises.rs  mock_response.json  tests.rs
src/api/tracks/: get_tracks.rs  mock_response.json  tests.rs
src/custom_widgets/: bottom_bar.rs  description.rs  exercise_information.rs  exercises.rs  help.rs  listblock.rs  mod.rs  track_information.rs  tracks.rs
src/fsm/: description_action.rs  exercises_action.rs  tracks_actions.rs
src/layout/: divider.rs
src/widgets/: bottom_bar.rs  dashboard.rs  description.rs  exercises.rs  help.rs  listblock.rs  mod.rs  tracks.rs
