[package]
name    = "exercism_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio                = { version = "1.25.0", features = [ "macros", "rt-multi-thread", "rt" ] }
serde_json           = "1.0.93"
throbber-widgets-tui = "0.1.3"
tui                  = "0.19.0"
crossterm            = "0.25.0"
reqwest              = "0.11.14"
serde                = { version = "1.0.152", features = [ "derive" ] }
dotenv               = "0.15.0"
strum = {version = "0.24.1" , features = ["derive"]}
base64 = "0.21.0"
minimad = "0.12.0"
async-trait = "0.1.68"

[features]
default = ["mock"]
mock    = []
